# MTeam-CLI

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.toml.template  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/handoff/: 2026-07-05-session-handoff.md
docs/superpowers/plans/: 2026-06-05-high-score-digest.md  2026-06-21-digest-per-account-isolation.md  2026-07-04-toml-config-migration.md
docs/superpowers/specs/: 2026-06-05-high-score-digest-design.md  2026-06-21-digest-per-account-isolation-design.md  2026-07-04-toml-config-migration-design.md
kubernetes-manifests/: statefulset.yaml
scripts/: build-and-push.sh  probe_api.py
src/mteam_cli/: __init__.py  __main__.py
src/mteam_cli/api/: __init__.py  _internal.py  digest.py  humanize.py  public.py  session.py
src/mteam_cli/automation/: localstorage.py  login.py  runner.py
src/mteam_cli/cli/: _account.py  _browser.py  _emit.py  _query.py  _table.py  main.py
src/mteam_cli/cli/commands/: detail.py  digest.py  doctor.py  hnr.py  inspect.py  login.py  messages.py  notices.py  profile.py  run.py  schedule.py  search.py  seeding.py
src/mteam_cli/core/: browser.py  browser_ctx.py  config.py  logging_utils.py  models.py
src/mteam_cli/notify/: __init__.py  base.py  factory.py  feishu.py  smtp.py  telegram.py
src/mteam_cli/scheduler/: daily.py
tests/: conftest.py  test_api_internal.py  test_config_digest.py  test_config_toml.py  test_digest.py  test_digest_command.py  test_runner_digest.py
