[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mteam-cli"
version = "0.2.1"
description = "M-Team CLI — keep-alive automation + AI-friendly data queries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.54,<2.0",
  "pyotp>=2.9,<3",
  "schedule>=1.2,<2",
  "humanize>=4.0,<5",
  "PyYAML>=6.0,<7",
  "python-dotenv>=1.0.0",
]

[project.scripts]
mteam-cli = "mteam_cli.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
