[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mteam-cli"
version = "0.6.1"
description = "M-Team CLI — keep-alive automation + AI-friendly data queries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # 上界必须锁到与 Dockerfile 基础镜像同一 minor（浏览器二进制按版本钉）：
  # 镜像 v1.61.0-noble ⟷ 此处 1.61.x。升级二者要一起改。
  "playwright>=1.61,<1.62",
  "pyotp>=2.9,<3",
  "schedule>=1.2,<2",
  "humanize>=4.0,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[project.scripts]
mteam-cli = "mteam_cli.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
